--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,9 @@ django-heroku==0.3.1
 kiwisolver==1.3.2
 matplotlib==3.4.3
 mediapipe==0.8.7.3
-mkl-fft==1.3.0
-mkl-random==1.2.2
-mkl-service==2.4.0
+#mkl-fft==1.3.0
+#mkl-random==1.2.2
+#mkl-service==2.4.0
 numpy==1.20.3
 opencv-contrib-python==4.5.3.56
 Pillow==8.3.2
