--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ psycopg2==2.8.6
 pyparsing==2.4.7
 python-dateutil==2.8.2
 pytz==2021.1
-setuptools==52.0.0.post20210125
+#setuptools==52.0.0.post20210125
 six==1.16.0
 sqlparse==0.4.1
 typing-extensions==3.10.0.0
