--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,10 @@ asgiref==3.4.1
 attrs==21.2.0
 certifi==2021.5.30
 cycler==0.10.0
-gunicorn==20.1.0
+dj-database-url==0.5.0
 Django==3.2.5
 django-heroku==0.3.1
+gunicorn==20.1.0
 kiwisolver==1.3.2
 matplotlib==3.4.3
 mediapipe==0.8.7.3
@@ -26,4 +27,5 @@ six==1.16.0
 sqlparse==0.4.1
 typing-extensions==3.10.0.0
 wheel==0.37.0
+whitenoise==5.3.0
 wincertstore==0.2
